metadata-classic/objects/WorkItemOutcome__mdt.object
<CustomObject>
    <description>Settings used to set the Outcome value on Work Items.</description>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordtypeId__c</fullName>
        <label>RecordtypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewAudit__c</fullName>
        <label>Review Audit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewIsVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ReviewIsVerified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Work Item Outcome</label>
    <pluralLabel>Work Item Outcomes</pluralLabel>
</CustomObject>